# Simple-REST-Mockserver

./: Cargo.toml  Dockerfile
src/: README.md  errors.rs  main.rs  registration.rs  sample_registration_request.json
