[package]
name = "Simple_REST_Mockserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
serde = {version = "1.0.137", features = ["derive"]}
reqwest = "0.11.11"
serde_json = "1.0.81"
anyhow = "1.0.62"
thiserror = "1.0.32"
redis = {version = "0.21.5", features = ["tokio-comp"]}